fix(discorded): fix dropdown-border shifting page down
Fixes #95

--- a/octoprint_themeify/static/less/discorded/discorded.less
+++ b/octoprint_themeify/static/less/discorded/discorded.less
@@ -222,7 +222,7 @@
             .nav {
                 >li.dropdown.open>.dropdown-toggle, >li.dropdown.active>.dropdown-toggle, >li.dropdown.open.active>.dropdown-toggle {
                     background: darken(@notquiteBlack, 1);
-                    border-bottom: 1px solid @notquiteWhite;
+                    border-bottom: 0px;
                     color: #fff;
             }
             > li > a:hover {
